--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .env
+data/yelp_academic_reviews4students.jsonl
+data/yelp_academic_dataset_business.json
+data/yelp_academic_dataset_business.json.zip
+data/yelp_academic_reviews4students.jsonl.zip
