fix!: ajout OUTPUT_FILE2 pour le nettoyage des données fix: addapter le scriptNettoyageDonnees pour qu'il utilise OUTPUT_FILE en entrée et OUTPUT_FILE2 en sortie

--- a/demo.env
+++ b/demo.env
@@ -2,3 +2,4 @@ YELP_API_KEY="Mettre la clef de Yelp ici. Non utiliser"
 INPUT_REVIEWS="Mettre le path du fichier des rewiews"
 INPUT_BUSINESS="Mettre le fichier des buisness"
 OUTPUT_FILE="Mettre le chemin du fichier de sortie"
+OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees"
