feat: ajout du script permettant de séparer les données en categories ajout du txt ayant les catégories permettant au script ci-dessus de fonctionner fix: ajout du dossier dans le .env ou les données seront séparées

--- a/demo.env
+++ b/demo.env
@@ -3,3 +3,4 @@ INPUT_REVIEWS="Mettre le path du fichier des rewiews"
 INPUT_BUSINESS="Mettre le fichier des buisness"
 OUTPUT_FILE="Mettre le chemin du fichier de sortie"
 OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees"
+OUTPUT_FILE3="Mettre le chemin d'un dossier"
