--- a/demo.env
+++ b/demo.env
@@ -2,5 +2,5 @@ YELP_API_KEY="Mettre la clef de Yelp ici. Non utiliser"
 INPUT_REVIEWS="Mettre le path du fichier des rewiews"
 INPUT_BUSINESS="Mettre le fichier des buisness"
 OUTPUT_FILE="Mettre le chemin du fichier de sortie"
-OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees"
+OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees ex: (C:/Users/VotreNom/Documents/donneesTraiter.jsonl)"
 OUTPUT_FILE3="Mettre le chemin d'un dossier"
