--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ data/yelp_academic_reviews4students.jsonl
 data/yelp_academic_dataset_business.json
 data/yelp_academic_dataset_business.json.zip
 data/yelp_academic_reviews4students.jsonl.zip
+data/__MACOSX/._yelp_academic_reviews4students.jsonl
