--- a/demo.env
+++ b/demo.env
@@ -3,6 +3,6 @@ INPUT_REVIEWS="Mettre le path du fichier des rewiews"
 INPUT_BUSINESS="Mettre le fichier des buisness"
 OUTPUT_FILE="Mettre le chemin du fichier de sortie"
 OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees ex: (C:/Users/VotreNom/Documents/donneesTraiter.jsonl)"
-OUTPUT_FILE3="Mettre le chemin d'un dossier"
+OUTPUT_FILE3="Dossier contenant les graphiques pour le nettoyage: separationEnplusieursFamilles"
 
 OUTPUT_FILE_prediction="Mettre le chemin d'un dossier pour mettre les resultat de la prediction d'etoile (ia prediction)"
