fix: bow + .env/info demo

--- a/demo.env
+++ b/demo.env
@@ -4,5 +4,5 @@ INPUT_BUSINESS="Mettre le fichier des buisness"
 OUTPUT_FILE="Mettre le chemin du fichier de sortie"
 OUTPUT_FILE2="Mettre le chemin du fichier de sortie pour utiliser le scirpt de nettoyage les donnees ex: (C:/Users/VotreNom/Documents/donneesTraiter.jsonl)"
 OUTPUT_FILE3="Dossier contenant les graphiques pour le nettoyage: separationEnplusieursFamilles"
-
+OUTPUT_BOW="chemin vers le resultat du BoW"
 OUTPUT_FILE_prediction="Mettre le chemin d'un dossier pour mettre les resultat de la prediction d'etoile (ia prediction)"
